# codex-for-grok

./: .gitignore  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  start.sh  status.sh  stop.sh
.github/: CODEOWNERS  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  compatibility.yml  config.yml  feature.yml  installation.yml
.github/workflows/: ci.yml  homebrew.yml  release.yml  stale.yml
release/: HOMEBREW.md  archive.sh  codex-for-grok.rb.in  grok-codex-bridge.rb.in  render-homebrew.sh  sbom.sh  validate-yaml.rb  verify.sh
src/: auth.rs  cli.rs  config.rs  lib.rs  main.rs  metrics.rs  protocol.rs  quota.rs  server.rs
